<resources>
    <string name="app_name">AsoDesUnidos</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="modificar">Modificar</string>
    <string name="salir">Salir</string>
    <string name="c_dula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="salario">Salario</string>
    <string name="tel_fono">Teléfono</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="direcci_n">Dirección</string>
    <string name="digite_la_c_dula_del_cliente">Digite la cédula del cliente</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="salario_del_cliente">Salario del cliente</string>
    <string name="consultar">Consultar</string>
    <string name="logoutimage">logoutImage</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="agregar_cliente_nuevo">Agregar cliente nuevo</string>
    <string name="asignar_un_pr_stamo">Asignar un préstamo</string>
    <string name="asignar_pr_stamo">Asignar préstamo</string>
    <string name="monto_a_pagar">Monto a pagar</string>
    <string name="revisar_monto">Revisar monto</string>
    <string name="digite_el_monto_que_desea_solicitar">Digite el monto que desea solicitar</string>
    <string name="calcular_cuota">Calcular Cuota</string>
    <string name="ver_mis_pr_stamos">Ver mis préstamos</string>
    <string name="gestionar_mis_ahorros">Gestionar mis ahorros</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="logout">LogOut</string>
    <string name="mis_prestamos">Mis Prestamos</string>
    <string name="digite_su_cedula">Digite su cedula</string>
    <string name="listar">Listar</string>
    <string name="hint_tipo_credito">Tipo de Credito</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_cuota">Cuota</string>
    <string name="hint_monto_pagado">Monto Pagado</string>
    <string name="regresar">Regresar</string>
</resources>