<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.agregarCliente"
    android:background="#015C56">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orangeF5812B"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#015C56" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="560dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/diseno_linear_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802">

        <EditText
            android:id="@+id/cedula_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/c_dula"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@id/contrasena_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nombre_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/salario_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/salario"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/telefono_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tel_fono"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/fecha_nac_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fecha_de_nacimiento"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/estado_civil_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/estado_civil"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/direccion_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/direcci_n"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/consultar_inf_cliente_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/agregar_cliente"
            android:textColor="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/regresar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/orangeF5812B"
        android:text="@string/regresar"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>