<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.asignarPrestamos"
    android:background="#015C56">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orangeF5812B"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#015C56" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="630dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/diseno_linear_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        tools:ignore="TextSizeCheck">

        <EditText
            android:id="@+id/consultaCedula_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_la_c_dula_del_cliente"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/consultar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F1C9A0"
            android:onClick="consultarCliente"
            android:text="@string/consultar"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <EditText
            android:id="@+id/consultaNombre_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/nombre_del_cliente"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/consultaSalario_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/salario_del_cliente"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/tipoPrestamo_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/diseno_dropdown_spinner"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <Spinner
            android:id="@+id/plazoPrestamo_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/diseno_dropdown_spinner"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/monto_solicitado_calcula_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_el_monto_que_desea_solicitar"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/monto_pagar_calcula_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/monto_a_pagar"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:focusable="false"
            />

        <Button
            android:id="@+id/calcular_cuota_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F1C9A0"
            android:minHeight="48dp"
            android:text="@string/revisar_monto"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/asignar_prestamo_adm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#F1C9A0"
            android:minHeight="48dp"
            android:text="@string/asignar_pr_stamo"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/regresar_asig_prest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="56dp"
        android:text="@string/regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/orangeF5812B"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:cornerRadius="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
