<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.principalCliente"
    android:background="#015C56">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orangeF5812B"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#015C56" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="391dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/diseno_linear_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/ver_prestamos_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/ver_mis_pr_stamos"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/gestionar_ahorros_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/gestionar_mis_ahorros"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="VisualLintButtonSize" />

        <Button

            android:id="@+id/calcular_cuota_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/calcular_cuota"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="VisualLintButtonSize" />

        <Button

            android:id="@+id/informacion_personal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/informaci_n_personal"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/orangeF5812B"
        android:text="@string/logout"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/my_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>