<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.MainActivity"
    android:background="#015C56">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orangeF5812B"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#015C56" />

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="340dp"
        android:background="@drawable/diseno_linear_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/user_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre_de_usuario"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/pass_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ingresar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F1C9A0"
            android:text="@string/ingresar"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/salir_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#f1c9a0"
            android:minHeight="48dp"
            android:text="@string/salir"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:cornerRadius="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


